--- a/lululemon/index.html
+++ b/lululemon/index.html
@@ -30,7 +30,7 @@
           </a>
         </div> <!--#logo-->
         <ul id="nav">
-          <li><a href="#">여성</a></li>
+          <li><a href="index-info.html">여성</a></li>
           <li><a href="#">남성</a></li>
           <li><a href="#">액세서리</a></li>
           <li><a href="#">커뮤니티</a></li>
