banana-biggrae-icon add

--- a/banana/index.html
+++ b/banana/index.html
@@ -11,8 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" 
   rel="stylesheet">
   <!-- style sheet 적용 -->
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" href="images/biggrae-icon.png">
   <!-- javaScript 적용 -->
   <script src="https://code.jquery.com/jquery.min.js"></script>
   <script src="./js/script.js"></script>
