biggrae-icon-add

--- a/banana/index-list(edit).html
+++ b/banana/index-list(edit).html
@@ -11,11 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" 
   rel="stylesheet">
   <!-- style sheet 적용 -->
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/list(edit).css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/list(edit).css">
+  <link rel="icon" href="images/biggrae-icon.png">
   <!-- script -->
   <script src="https://code.jquery.com/jquery.min.js"></script>
-  <script src="./js/script-list.js"></script>
+  <script src="js/script-list.js"></script>
 </head>
 <body>
   <header>
