--- a/banana/index-info.html
+++ b/banana/index-info.html
@@ -11,10 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" 
   rel="stylesheet">
   <!-- style sheet 적용 -->
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/info.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/info.css">
+  <link rel="icon" href="images/biggrae-icon.png">
+  <!-- script -->
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="./js/script-info.js"></script>
+  <script src="js/script-info.js"></script>
 </head>
 <body>
   <header>
