--- a/banana/index-list(edit).html
+++ b/banana/index-list(edit).html
@@ -22,15 +22,15 @@
   <header>
     <div id="header-wrap">
       <div id="logo">
-        <a href="./index.html">
-          <img src="./images/binggrae-logo.png" alt="Binggrae-logo">
+        <a href="index.html">
+          <img src="images/binggrae-logo.png" alt="Binggrae-logo">
         </a>
       </div>
       <div id="nav">
         <ul>
-          <li><a href="./index-info.html">회사소개</a></li>
+          <li><a href="index-info.html">회사소개</a></li>
           <li><a href="#">제품소개</a></li>
-          <li><a href="./index-list(edit).html">이벤트</a></li>
+          <li><a href="index-list(edit).html">이벤트</a></li>
           <li><a href="#">고객센터</a></li>
         </ul>
         <div>
@@ -133,10 +133,10 @@
     <div id="shortcut-wrap">
       <div id="p-wrap">
         <p id="left">
-          <img src="./images/left.png">
+          <img src="images/left.png">
         </p>
         <p id="right">
-          <img src="./images/right.png">
+          <img src="images/right.png">
         </p>
       </div><!--#p-wrap-->
       <div id="shortcut-txt">
@@ -176,13 +176,13 @@
 
         <ul id="sns">
           <li>
-            <a href="http://www.instagram.com/binggraekorea" target="_blank"><img src="./images/instargram.png" alt="binggrae-insta"></a>
+            <a href="http://www.instagram.com/binggraekorea" target="_blank"><img src="images/instargram.png" alt="binggrae-insta"></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/@official.binggrae" target="_blank"><img src="./images/youtube.png" alt="binggrae-youtube"></a>
+            <a href="https://www.youtube.com/@official.binggrae" target="_blank"><img src="images/youtube.png" alt="binggrae-youtube"></a>
           </li>
           <li>
-            <a href="https://www.tftmall.co.kr/main/index.php" target="_blank"><img src="./images/tft.png" alt="binggrae-tftmall"></a>
+            <a href="https://www.tftmall.co.kr/main/index.php" target="_blank"><img src="images/tft.png" alt="binggrae-tftmall"></a>
           </li>
         </ul><!--#sns-->
       </div><!--#address-wrap-->
