--- a/index_works.html
+++ b/index_works.html
@@ -16,14 +16,14 @@
   <link rel="icon" type="image/png" href="./images/logo-lamp.png">
   <!-- 자바 스크립트 -->
   <script src="https://code.jquery.com/jquery.min.js"></script>
-  <script src="./js/script_work.js"></script>
+  <script src="js/script_work.js"></script>
 </head>
 <body>
 
   <header id="header">
     <div id="header-wrap">
       <div id="logo">
-        <a href="index.html"><img src="./images/logo.png" alt="myname-logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="myname-logo"></a>
       </div> <!--#logo-->
       <ul id="nav">
         <li><a href="index.html">Home</a></li>
@@ -50,33 +50,33 @@
 
           <div class="con w1">
             <div class="thumb">
-              <img src="./images/images/banana-thumbnail_02.jpg" alt="bananamilk-main">
+              <img src="images/images/banana-thumbnail_02.jpg" alt="bananamilk-main">
               <div class="caption">
                 <h3>빙그레 바나나맛우유 웹페이지 제작</h3>
                 <ul>
                   <li>
                     • 기획:<br>
-                    디자인(1주) 코딩(2주)
+                    디자인(5일) 코딩(2주)
                   </li>
                   <li>
                     • 제작프로그램:<br>
                     Photoshop, Illustrator, Visual Studio Code
                   </li>
                 </ul>
-                <button><a href="./banana/index.html" target="_blank">Page open</a></button>
+                <button><a href="banana/index.html" target="_blank">Page open</a></button>
               </div><!--.caption-->
             </div><!--.thumb-->
           </div><!--.con w1-->
 
           <div class="con w2">
             <div class="thumb">
-              <img src="./images/images/lululemon-thumbnail.png" alt="lululemon-main">
+              <img src="images/images/lululemon-thumbnail.png" alt="lululemon-main">
               <div class="caption">
                 <h3>룰루레몬 웹 페이지 리뉴얼</h3>
                 <ul>
                   <li>
                     • 기획:<br>
-                    디자인(1주) 코딩(3주)
+                    디자인(5일) 코딩(3주)
                   </li>
                   <li>
                     • 제작프로그램:<br>
@@ -89,9 +89,9 @@
           </div><!--.con w2-->
           <div class="con w3">
             <div class="thumb">
-              <img src="./images/images/asiana-thumbnail.jpg" alt="asianairline-main">
+              <img src="images/images/asiana-thumbnail.jpg" alt="asianairline-main">
               <div class="caption">
-                <h3>아시아나항공 웹 페이지 리뉴얼<br>(반응형)</h3>
+                <h3><span>(반응형)</span> 아시아나항공 웹 페이지 리뉴얼</h3>
                 <ul>
                   <li>
                     • 기획:<br>
@@ -113,63 +113,83 @@
 
           <div class="con w4">
             <div class="thumb">
-              <img src="./images/images/starkcoffee-mockup.jpg" alt="starkcoffee-card">
+              <img src="images/images/starkcoffee-mockup.jpg" alt="starkcoffee-card">
               <div class="popup caption">
                 <h3>스타크커피 원두 카드 제작</h3>
                 <ul>
                   <li>
                     • 기획:<br>
-                    22.10 4주
+                    22.10 (2주)
                   </li>
                   <li>
                     • 제작프로그램:<br>
                     Photoshop, Illustrator
                   </li>
                 </ul>
-                <button><a href="./images/images/starkcoffee-mockup.jpg">Image open</a></button>
+                <button><a href="images/images/starkcoffee-mockup.jpg">Image open</a></button>
               </div><!--.caption-->
             </div><!--.thumb-->
           </div><!--.con w4-->
 
           <div class="con w5">
             <div class="popup thumb">
-              <img src="./images/images/marylazhu-tag.jpg" alt="marylazhu-product-tag">
+              <img src="images/images/marylazhu-tag.jpg" alt="marylazhu-product-tag">
               <div class="popup caption">
                 <h3>메리라쥬 행택 시안</h3>
                 <ul>
                   <li>
                     • 기획:<br>
-                    22.10 ~ 22.10 2주
+                    22.10 (4일)
                   </li>
                   <li>
                     • 제작프로그램:<br>
                     Photoshop, Illustrator
                   </li>
                 </ul>
-                <button><a href="./images/images/marylazhu-tag.jpg">Image open</a></button>
+                <button><a href="images/images/marylazhu-tag.jpg">Image open</a></button>
               </div><!--.caption-->
             </div><!--.thumb-->
           </div><!--.con w5-->
 
           <div class="con w6">
             <div class="thumb">
-              <img src="./images/images/2023-calender.jpg" alt="2023-calender-drawing">
+              <img src="images/images/2023-calender.jpg" alt="2023-calender-drawing">
               <div class="popup caption">
                 <h3>2023 달력 드로윙</h3>
                 <ul>
                   <li>
                     • 기획:<br>
-                    22. 10 ~ 22. 11 4주
+                    22. 10 ~ 22. 11 (4주)
                   </li>
                   <li>
                     • 제작프로그램:<br>
-                    Photoshop, Illustrator
+                    Photoshop, Illustrator, Wacome
                   </li>
                 </ul>
-                <button><a href="./images/images/2023-calender.jpg">Image open</a></button>
+                <button><a href="images/images/2023-calender.jpg">Image open</a></button>
               </div><!--.caption-->
             </div><!--.thumb-->
           </div><!--.con w6-->
+
+          <div class="con w7">
+            <div class="thumb">
+              <img src="images/images/2023-weddingcard.jpg" alt="korea traditional wedding card">
+              <div class="popup caption">
+                <h3>청첩장, 웨딩 카드</h3>
+                <ul>
+                  <li>
+                    -기획:<br>
+                    23.06.9 ~ 06.10 (2일)
+                  </li>
+                  <li>
+                    -제작프로그램:<br>
+                    Photoshop, Illustrator
+                  </li>
+                </ul>
+                <button><a href="images/images/2023-weddingcard.jpg">Image open</a></button>
+              </div>
+            </div>
+          </div><!--.con w7-->
 
         </div> <!--#design-->
         
@@ -192,7 +212,7 @@
               <button type="button">Image open</button>
             </div>
           </div>
-        </div>
+        </div><!-.con w7--
       -->
       </div><!--#content-wrap-->
   
