--- a/asiana/index.html
+++ b/asiana/index.html
@@ -75,6 +75,7 @@
           <span>R</span>
           <span>L</span>
           <span>I</span>
+          <span>N</span>
           <span>E</span>
           <span>S</span>
           <span>.</span>
